# ssss-rs

./: Cargo.toml  test.txt
.github/workflows/: rust.yml
src/: err.rs  inputoutput.rs  lib.rs  main.rs  main.rs1  shamir.rs  shard.rs  util.rs
src/encoding/: base64.rs  mod.rs  util.rs
src/math/: galois_field.rs  integer_unsafe.rs  mod.rs  poly.rs
ssss-rs-cli/: Cargo.toml
ssss-rs-cli/src/: inputoutput.rs  main.rs
ssss-rs-core/: Cargo.toml
ssss-rs-core/src/: lib.rs
ssss-rs-core/src/encoding/: mod.rs
ssss-rs-core/src/math/: gf.rs  mod.rs
