[package]
name = "rs-ssss"
version = "0.1.0"
authors = ["Wampie Driessen <wampiedriessen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
num-bigint = { version = "0.3", features = ["rand"] }
fraction = { version = "0.8", features = ["with-bigint"] }
