[package]
name = "rs-ssss"
version = "0.1.0"
authors = ["Wampie Driessen <wampiedriessen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8" }
num-bigint = { version = "0.4", features = ["rand"] }
structopt = "0.3.26"

[dev-dependencies]
test-case = "2.2.2"
