[package]
name = "ssss-rs"
version = "0.2.0"
authors = ["Wampie Driessen <wampiedriessen@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.2" }
structopt = "0.3.26"

[dev-dependencies]
test-case = "3.3.1"
